--- a/index.html
+++ b/index.html
@@ -1,1 +1,351 @@
+<!DOCTYPE html>
+
+<html lang="en-US">
+<head>
+  <meta charset="UTF-8">
+  <title>water heater repair coloma in Coloma | Murray Plumbing Technical Guide</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="index, follow">
+
+  <meta name="description" content="Technical guide to water heater repair coloma in Coloma, CA covering diagnostics, process flow, local standards, and complexity factors for hot water systems.">
+  <meta name="geo.position" content="38.8005;-120.8893">
+  <meta name="geo.placename" content="Coloma, California">
+  <meta name="geo.region" content="US-CA">
+
+  <style>
+    :root { color-scheme: light; }
+    html, body { margin: 0; padding: 0; }
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      line-height: 1.55;
+      color: #111;
+      background: #fff;
+    }
+    header, main, footer { display: block; }
+    header, main, footer {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px 16px;
+    }
+    header { padding-bottom: 10px; border-bottom: 1px solid #e6e6e6; }
+    footer { padding-top: 10px; border-top: 1px solid #e6e6e6; font-size: 0.95rem; }
+    h1 { font-size: 1.75rem; margin: 0 0 6px 0; }
+    h2 { font-size: 1.2rem; margin: 18px 0 8px 0; }
+    p { margin: 0 0 10px 0; }
+    .byline { font-size: 1rem; color: #333; margin: 0; }
+    dl { margin: 10px 0 0 0; }
+    dt { font-weight: 700; margin-top: 10px; }
+    dd { margin: 4px 0 0 0; padding-left: 14px; border-left: 3px solid #f0f0f0; }
+    .panel {
+      border: 1px solid #e6e6e6;
+      border-radius: 10px;
+      padding: 14px;
+      margin: 10px 0 0 0;
+    }
+    .svg-wrap { margin: 12px 0 6px 0; }
+    .note { color: #333; font-size: 0.98rem; }
+    table { width: 100%; border-collapse: collapse; margin-top: 10px; }
+    caption { text-align: left; font-weight: 700; padding: 8px 0; }
+    th, td { border: 1px solid #e6e6e6; padding: 10px; vertical-align: top; }
+    thead th { background: #fafafa; }
+    th[scope="col"] { text-align: left; }
+    th[scope="row"] { text-align: left; width: 28%; }
+    .faq h3 { font-size: 1.05rem; margin: 12px 0 6px 0; }
+    a { color: #0b57d0; text-decoration: underline; }
+    a:focus { outline: 2px solid #0b57d0; outline-offset: 2px; }
+  </style>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Plumber",
+        "@id": "https://murrayplumbing.net/#murray-plumbing-coloma-water-heater-repair-coloma",
+        "inLanguage": "en-US",
+        "name": "Murray Plumbing",
+        "description": "Technical guide to water heater repair coloma in Coloma, CA covering diagnostics, process flow, local standards, and complexity factors for hot water systems.",
+        "areaServed": "Coloma, California",
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 38.8005,
+          "longitude": -120.8893
+        },
+        "serviceArea": {
+          "@type": "GeoCircle",
+          "geoMidpoint": {
+            "@type": "GeoCoordinates",
+            "latitude": 38.8005,
+            "longitude": -120.8893
+          },
+          "geoRadius": 12000
+        },
+        "knowsAbout": [
+          "water heater diagnostics",
+          "temperature control and safety devices",
+          "sediment and scale impacts",
+          "venting and combustion safety",
+          "pressure relief and discharge routing"
+        ],
+        "hasOfferCatalog": {
+          "@type": "OfferCatalog",
+          "itemListElement": [
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "water heater repair coloma"
+              }
+            },
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "water heater diagnostics"
+              }
+            },
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "water heater safety and venting verification"
+              }
+            }
+          ]
+        },
+        "sameAs": [
+          "https://sites.google.com/view/at-what-temperature-do-pipes-f/water-heater-repair-coloma",
+          "https://www.murrayplumbing.net/water-heater-repair-coloma-ca-murray-plumbing/"
+        ],
+        "citation": "https://www.saccounty.gov/Government/Pages/BuildingPermitsandInspection.aspx"
+      },
+      {
+        "@type": "FAQPage",
+        "inLanguage": "en-US",
+        "about": {
+          "@id": "https://murrayplumbing.net/#murray-plumbing-coloma-water-heater-repair-coloma"
+        },
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "What conditions typically lead to water heater repair coloma in Coloma?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Common triggers include loss of heating performance, control failures, leakage at connections, and sediment-related stress that reduces recovery and stability."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "How is a water heater issue diagnosed before repairs are selected?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Diagnosis commonly includes checks of heat source controls, thermostatic regulation, safety relief operation, supply integrity, and evidence of internal scaling or corrosion."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "When do local standards affect the repair scope or required documentation?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Standards can influence venting, seismic restraint, discharge routing, and inspection expectations when safety-related components are altered or replaced."
+            }
+          }
+        ]
+      },
+      {
+        "@type": "HowTo",
+        "inLanguage": "en-US",
+        "name": "How water heater repair coloma Works in Coloma",
+        "about": {
+          "@id": "https://murrayplumbing.net/#murray-plumbing-coloma-water-heater-repair-coloma"
+        },
+        "step": [
+          {
+            "@type": "HowToStep",
+            "name": "Evaluate symptoms and system configuration",
+            "text": "Review performance symptoms, heater type, fuel source, and installation conditions to set a diagnostic baseline."
+          },
+          {
+            "@type": "HowToStep",
+            "name": "Isolate and verify key components",
+            "text": "Confirm supply integrity, controls, safety devices, and venting or electrical conditions before selecting a repair path."
+          },
+          {
+            "@type": "HowToStep",
+            "name": "Perform targeted repair actions",
+            "text": "Replace or correct failed controls, valves, ignition or heating elements, and address sediment impacts when present."
+          },
+          {
+            "@type": "HowToStep",
+            "name": "Test operation and safety functions",
+            "text": "Verify stable temperature regulation, normal cycling, leak-free operation, and correct safety relief behavior."
+          },
+          {
+            "@type": "HowToStep",
+            "name": "Document outcomes for compliance context",
+            "text": "Record the final condition and any relevant constraints tied to local inspection and permitting expectations."
+          }
+        ]
+      }
+    ]
+  }
+  </script>
+
+</head>
+
+<body>
+  <header>
+    <h1>water heater repair coloma in Coloma</h1>
+    <p class="byline">Technical Overview for Coloma Residents</p>
+  </header>
+
+  <main id="main">
+    <article>
+      <section aria-labelledby="intro">
+        <h2 id="intro">Introduction</h2>
+        <p>water heater repair coloma describes the technical assessment and correction of faults that disrupt hot water production, temperature stability, or safety behavior in residential systems. The work typically focuses on controls, heat-transfer components, pressure and temperature protection, and the connections that integrate the heater with the broader plumbing distribution network.</p>
+        <p>In Coloma, system behavior is often shaped by older housing stock, mixed infrastructure eras, and foothill conditions that can accelerate wear. Mineral characteristics associated with regional water sources can contribute to sediment accumulation, while seasonal cold snaps may expose weaknesses in supply connections, relief discharge routing, and temperature control consistency.</p>
+      </section>
+
+```
+  <section aria-labelledby="terms">
+    <h2 id="terms">Key Terminology</h2>
+    <dl>
+      <dt>Temperature and Pressure Relief Valve (T&amp;P Valve)</dt>
+      <dd>A safety device designed to release excess pressure or temperature to reduce hazardous operating conditions.</dd>
+
+      <dt>Dip Tube</dt>
+      <dd>An internal tube that directs incoming cold water to the lower portion of a tank to support efficient heating and mixing control.</dd>
+
+      <dt>Anode Rod</dt>
+      <dd>A sacrificial metal component that slows tank corrosion by attracting corrosive reactions inside the heater.</dd>
+
+      <dt>Thermostatic Control</dt>
+      <dd>The control mechanism that regulates heating cycles to maintain a stable outlet water temperature.</dd>
+
+      <dt>Sediment Accumulation</dt>
+      <dd>Mineral deposits that settle within a tank and can reduce efficiency, alter heat transfer, and contribute to component stress.</dd>
+    </dl>
+  </section>
+
+  <section aria-labelledby="process">
+    <h2 id="process">Process &amp; Diagnostics</h2>
+    <p>Technical evaluation typically begins with symptom mapping (no hot water, unstable temperature, unusual sounds, leakage, or intermittent operation) alongside a configuration review (fuel type, venting method, electrical feed, and placement constraints). Diagnostic selection focuses on safety first, then isolates the most probable failure points using controlled checks of supply integrity, controls, and protective devices.</p>
+
+    <div class="panel svg-wrap">
+      <svg width="100%" height="170" viewBox="0 0 760 170" role="img" aria-labelledby="svcTitle" xmlns="http://www.w3.org/2000/svg">
+        <title id="svcTitle">Service flow diagram for water heater repair coloma in Coloma</title>
+        <desc>Five-stage flow showing evaluation, isolation, targeted repair, safety testing, and documentation for compliance context.</desc>
+
+        <rect x="18" y="42" width="140" height="64" rx="10" fill="#ffffff" stroke="#1a1a1a"/>
+        <text x="88" y="69" text-anchor="middle" font-family="Arial, Helvetica, sans-serif" font-size="13" fill="#111">Evaluate</text>
+        <text x="88" y="88" text-anchor="middle" font-family="Arial, Helvetica, sans-serif" font-size="12" fill="#111">Symptoms &amp; setup</text>
+
+        <rect x="170" y="42" width="140" height="64" rx="10" fill="#ffffff" stroke="#1a1a1a"/>
+        <text x="240" y="69" text-anchor="middle" font-family="Arial, Helvetica, sans-serif" font-size="13" fill="#111">Isolate</text>
+        <text x="240" y="88" text-anchor="middle" font-family="Arial, Helvetica, sans-serif" font-size="12" fill="#111">Controls &amp; safety</text>
+
+        <rect x="322" y="42" width="140" height="64" rx="10" fill="#ffffff" stroke="#1a1a1a"/>
+        <text x="392" y="69" text-anchor="middle" font-family="Arial, Helvetica, sans-serif" font-size="13" fill="#111">Repair</text>
+        <text x="392" y="88" text-anchor="middle" font-family="Arial, Helvetica, sans-serif" font-size="12" fill="#111">Targeted actions</text>
+
+        <rect x="474" y="42" width="140" height="64" rx="10" fill="#ffffff" stroke="#1a1a1a"/>
+        <text x="544" y="69" text-anchor="middle" font-family="Arial, Helvetica, sans-serif" font-size="13" fill="#111">Test</text>
+        <text x="544" y="88" text-anchor="middle" font-family="Arial, Helvetica, sans-serif" font-size="12" fill="#111">Operation &amp; relief</text>
+
+        <rect x="626" y="42" width="116" height="64" rx="10" fill="#ffffff" stroke="#1a1a1a"/>
+        <text x="684" y="69" text-anchor="middle" font-family="Arial, Helvetica, sans-serif" font-size="13" fill="#111">Document</text>
+        <text x="684" y="88" text-anchor="middle" font-family="Arial, Helvetica, sans-serif" font-size="12" fill="#111">Compliance context</text>
+
+        <line x1="158" y1="74" x2="170" y2="74" stroke="#1a1a1a" stroke-width="2"/>
+        <polygon points="170,74 162,69 162,79" fill="#1a1a1a"/>
+
+        <line x1="310" y1="74" x2="322" y2="74" stroke="#1a1a1a" stroke-width="2"/>
+        <polygon points="322,74 314,69 314,79" fill="#1a1a1a"/>
+
+        <line x1="462" y1="74" x2="474" y2="74" stroke="#1a1a1a" stroke-width="2"/>
+        <polygon points="474,74 466,69 466,79" fill="#1a1a1a"/>
+
+        <line x1="614" y1="74" x2="626" y2="74" stroke="#1a1a1a" stroke-width="2"/>
+        <polygon points="626,74 618,69 618,79" fill="#1a1a1a"/>
+
+        <text x="18" y="140" font-family="Arial, Helvetica, sans-serif" font-size="12" fill="#333">
+          Diagnostic emphasis: verify safety functions and installation conditions before finalizing repair scope.
+        </text>
+      </svg>
+    </div>
+
+    <p class="note">Targeted repair actions commonly address failed thermostatic controls, ignition or heating elements, supply-side valves, relief components, and sediment-related impacts that change cycling behavior. Final verification focuses on stable delivery, safe pressure/temperature response, and leak-free integration with the home’s distribution system.</p>
+  </section>
+
+  <section aria-labelledby="standards">
+    <h2 id="standards">Technical Standards &amp; Local Context</h2>
+    <p>Work affecting water heating systems is commonly evaluated against local expectations for safety devices, discharge routing, venting integrity, and installation conditions. In areas such as Coloma where properties vary widely by age and infrastructure type, documentation and inspection considerations may differ depending on what components are altered and how the system interfaces with existing plumbing and structural features.</p>
+    <p>For formal regulatory context related to permitting and inspection practices in the region, refer to the published guidance from the local authority: <a href="https://www.saccounty.gov/Government/Pages/BuildingPermitsandInspection.aspx">Building permits and inspection standards reference</a>.</p>
+  </section>
+
+  <section aria-labelledby="complexity">
+    <h2 id="complexity">Cost &amp; Complexity Factors</h2>
+    <table>
+      <caption>Variables that influence repair complexity</caption>
+      <thead>
+        <tr>
+          <th scope="col">Factor</th>
+          <th scope="col">Why it matters</th>
+          <th scope="col">Typical indicators</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">Heater type and energy source</th>
+          <td>Fuel type and design determine control architecture, safety checks, and repair compatibility.</td>
+          <td>Different diagnostic paths for gas ignition, venting, or electric element control.</td>
+        </tr>
+        <tr>
+          <th scope="row">Installation constraints</th>
+          <td>Clearances, access, and routing can change how components are serviced and verified.</td>
+          <td>Limited space, older vent runs, tight utility closets, or nonstandard drain proximity.</td>
+        </tr>
+        <tr>
+          <th scope="row">Sediment and internal wear</th>
+          <td>Scale and deposits alter heat transfer and can accelerate part failure or instability.</td>
+          <td>Rumbling sounds, inconsistent temperature, slow recovery, or repeated control stress.</td>
+        </tr>
+        <tr>
+          <th scope="row">System interfaces</th>
+          <td>Supply pressure behavior and distribution condition affect performance and safety margins.</td>
+          <td>Relief discharge concerns, valve leakage, flow irregularities, or mixed pipe materials.</td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
+
+  <section class="faq" aria-labelledby="faq">
+    <h2 id="faq">Common Questions (FAQ)</h2>
+
+    <section>
+      <h3>What conditions typically lead to water heater repair coloma in Coloma?</h3>
+      <p>Common triggers include loss of heating performance, control failures, leakage at connections, and sediment-related stress that reduces recovery and stability.</p>
+    </section>
+
+    <section>
+      <h3>How is a water heater issue diagnosed before repairs are selected?</h3>
+      <p>Diagnosis commonly includes checks of heat source controls, thermostatic regulation, safety relief operation, supply integrity, and evidence of internal scaling or corrosion.</p>
+    </section>
+
+    <section>
+      <h3>When do local standards affect the repair scope or required documentation?</h3>
+      <p>Standards can influence venting, seismic restraint, discharge routing, and inspection expectations when safety-related components are altered or replaced.</p>
+    </section>
+  </section>
+</article>
+```
+
+  </main>
+
+  <footer>
+    © 2026 Murray Plumbing · Serving Coloma, California
+  </footer>
+</body>
+</html>
 
